--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
+    "build": "expo export",
+    "start": "expo start"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.12.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/stack": "^7.2.3",
+    "aws-amplify": "^6.14.0",
+    "axios": "^1.8.4",
+    "ejs": "^3.1.10",
     "expo": "~52.0.40",
+    "expo-auth-session": "^6.0.3",
+    "expo-av": "^15.0.2",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
@@ -29,7 +32,11 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
+    "expo-video": "^2.0.6",
     "expo-web-browser": "~14.0.2",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "openid-client": "^5.7.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
