--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "target": "es6",
     "strict": true,
+    "jsx": "react", // Enable JSX support
     "paths": {
       "@/*": [
         "./*"
@@ -16,5 +17,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/AuthScreen.tjs", "app/HomePage.js"  ]
+, "app/AuthScreen.tjs", "app/HomePage.js", "app/server.js", "app/server.js", "app/Callback.js"  ]
 }
