--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@aws-amplify/api": "^6.3.8",
     "@aws-amplify/auth": "^6.12.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/slider": "^4.5.6",
@@ -34,8 +35,9 @@
     "expo-system-ui": "~4.0.8",
     "expo-video": "^2.0.6",
     "expo-web-browser": "~14.0.2",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "jwt-decode": "^4.0.0",
     "openid-client": "^5.7.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -45,10 +47,13 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
